# MultiCallC

./: .gitignore  CMakeLists.txt  README.md  main.asm  main.bash  main.c  main.cc  main.el  main.f90  main.go  main.jl  main.lua  main.ml  main.pas  main.php  main.py  main.rb  main.rs  main.scm  main.tcl  main_CAPI.py  main_CAPI.rb  main_CTypes.py  main_S.cc  main_ada.adb  main_c11.cc  main_ffi.rb  main_j.java
include/: c-java.h  libfun.h  main_j.h
python_c_api/: CMakeLists.txt  c-module.c  setup.py
src/: c-bash.c  c-elisp.c  c-java.cc  c-lua.c  c-module.c  c-ocaml.c  c-php.c  c-python.c  c-ruby.c  c-scheme.c  c-tcl.c  libfun.cc  main_j.cc
test/: CMakeLists.txt  test1.cc  test2.cc  test3.f90
